--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
   <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
@@ -7,18 +8,20 @@
     let audioPlayer = null;
 
     window.addEventListener('message', function (event) {
-      if (event.data.transactionType == "playSound") {
-        if (audioPlayer != null) {
+      if (event.data.transactionType === "playSound") {
+        if (audioPlayer !== null) {
           audioPlayer.pause();
         }
 
-        audioPlayer = new Howl({ src: ["./sounds/" + event.data.transactionFile + ".ogg"] });
+        audioPlayer = new Howl({ src: [`./sounds/${event.data.transactionFile}.ogg`] });
         audioPlayer.volume(event.data.transactionVolume);
         audioPlayer.play();
       }
 
-      if (event.data.transactionType == "updateVolume") {
-        audioPlayer.volume(event.data.transactionVolume);
+      if (event.data.transactionType === "updateVolume") {
+        if (audioPlayer !== null) {
+          audioPlayer.volume(event.data.transactionVolume);
+        }
       }
     });
   </script>
